# meta-harney

./: .gitignore  README.md  pnpm-lock.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
clients/typescript/: .eslintrc.cjs  package.json  tsconfig.json  vitest.config.ts
clients/typescript/src/: client.ts  errors.ts  framing.ts  index.ts  protocol.ts  transport.ts
clients/typescript/tests/: client.test.ts  e2e-real-bridge.test.ts  framing.test.ts  protocol.test.ts  transport.test.ts
docs/: abstractions.md  architecture.md  providers.md  testing.md
docs/superpowers/plans/: 2026-05-13-meta-harney-phase1-foundation.md  2026-05-14-meta-harney-phase10-bridge.md  2026-05-14-meta-harney-phase11-tui.md  2026-05-14-meta-harney-phase2-engine.md  2026-05-14-meta-harney-phase3-runtime.md  2026-05-14-meta-harney-phase4-providers.md  2026-05-14-meta-harney-phase5-openai-docs.md  2026-05-14-meta-harney-phase6-stabilize.md  2026-05-14-meta-harney-phase7-thinking-full-and-ci.md  2026-05-14-meta-harney-phase8-oh-mini-cli.md  2026-05-14-meta-harney-phase9a-provider-catalog.md  2026-05-14-meta-harney-phase9b-oh-mini-credentials.md
docs/superpowers/specs/: 2026-05-13-meta-harney-design.md  (+7 more)
src/meta_harney/: __init__.py  errors.py  runtime.py
tests/: conftest.py
tests/contracts/: compaction_strategy.py  llm_provider.py  multi_agent_backend.py  permission_resolver.py  prompt_builder.py  session_store.py  trace_sink.py
tests/integration/: test_engine_e2e.py
tests/unit/: test_errors.py  test_public_api.py  test_runtime.py
(+88 files in other folders)
