[project]
name = "meta-harney"
version = "0.2.3"
description = "Domain-agnostic agent runtime SDK — abstractions for tool, hook, permission, prompt, task, session, trace, multi-agent, and compaction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "meta-harney contributors" },
]
dependencies = [
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/bailaohe/meta-harney"
Repository = "https://github.com/bailaohe/meta-harney"
Issues = "https://github.com/bailaohe/meta-harney/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "anthropic>=0.40",
    "openai>=1.50",
]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_harney"]

[tool.hatch.build.targets.sdist]
include = [
    "src/meta_harney",
    "README.md",
    "CHANGELOG.md",
    "docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
